Solve buttons on new file page wrap outside of the container

--- a/app/assets/stylesheets/pages/editor.scss
+++ b/app/assets/stylesheets/pages/editor.scss
@@ -36,6 +36,7 @@
     line-height: 35px;
     padding-top: 7px;
     padding-bottom: 7px;
+    display: flex;
 
     .float-right {
       height: 20px;
@@ -49,6 +50,7 @@
     display: block;
     float: left;
     margin-right: 10px;
+    flex: 1;
   }
 
   .editor-file-name {
@@ -60,14 +62,10 @@
 
   .new-file-name {
     display: inline-block;
-    max-width: 450px;
+    max-width: 420px;
     float: left;
 
     @media(max-width: map-get($grid-breakpoints, lg)-1) {
-      width: 280px;
-    }
-
-    @media(max-width: map-get($grid-breakpoints, md)-1) {
       width: 180px;
     }
   }
@@ -111,9 +109,11 @@
 }
 
 
-@include media-breakpoint-down(xs) {
+@include media-breakpoint-down(sm) {
   .file-editor {
     .file-title {
+      display: block;
+
       .float-right {
         height: auto;
       }
@@ -143,6 +143,10 @@
           width: 100%;
         }
       }
+    }
+
+    .editor-ref {
+      max-width: 250px;
     }
   }
 }
